<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtBox1"
        style="@style/textFormat"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtBox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/txtBox2"
        style="@style/textFormat"
        android:layout_width="218dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtBox2"
        app:layout_constraintStart_toStartOf="@+id/txtBox1"
        app:layout_constraintTop_toBottomOf="@+id/txtBox1"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtBox3"
        style="@style/textFormat"
        android:layout_width="150dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtBox3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtBox2"
        app:layout_constraintTop_toTopOf="@+id/txtBox2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtBox4"
        style="@style/textFormat"
        android:layout_width="226dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:text="@string/txtBox4"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtBox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtBox1"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/txtBox5"
        style="@style/textFormat"
        android:layout_width="217dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtBox5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBox2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textHowToPlay"
        style="@style/textFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/howToPlay"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBox5" />

    <Button
        android:id="@+id/btn1"
        style="@style/textFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@color/Yellow"
        android:text="@string/txtBox1"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn2"
        style="@style/textFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/Green"
        android:text="@string/txtBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHowToPlay"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn3"
        style="@style/textFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/txtBox3"
        android:background="@color/Red"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btn4"
        style="@style/textFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/SkyBlue"
        android:text="@string/txtBox4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn5"
        style="@style/textFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBox5"
        android:background="@color/Purple"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn2" />


</androidx.constraintlayout.widget.ConstraintLayout>